# Prime-Lite

./: README.md  requirements.txt
teleop/: .gitignore  LICENSE  README.md  pyproject.toml
teleop/data/bhl_arm/meshes/: base_visual.stl  left_elbow_pitch_visual.stl  left_fingertip_collision.stl  left_shoulder_pitch_visual.stl  left_shoulder_roll_collision.stl  left_shoulder_yaw_visual.stl  left_wrist_pitch_collision.stl  left_wrist_roll_visual.stl  left_wrist_yaw_collision.stl  right_elbow_pitch_visual.stl  right_fingertip_collision.stl  right_shoulder_pitch_visual.stl  right_shoulder_roll_collision.stl  right_shoulder_yaw_collision.stl  right_wrist_pitch_collision.stl  right_wrist_roll_visual.stl  right_wrist_yaw_collision.stl
teleop/data/bhl_arm/mjcf/: bhl_arm.xml
teleop/data/bhl_arm/scad/: base.scad  left_dummy_finger.scad  left_shoulder_yaw.scad  (+4 more)
teleop/docs/: connection-logic.md  onshape-cad-conventions.md
teleop/examples/: canup.sh  connect_bhl_arm.py  discover_bhl_arm_actuators.py  list_robots.py  list_teleoperators.py  teleop_bhl_arm_keyboard.py  teleop_bhl_arm_keyboard_ik.py  teleop_bhl_arm_spacemouse_ik.py  teleop_bhl_arm_steamvr_ik.py
teleop/lerobot_robot_bhl_arm/: __init__.py  bhl_arm.py  config_bhl_arm.py
teleop/lerobot_teleoperator_bhl_arm/: __init__.py  bhl_arm_keyboard.py  bhl_arm_keyboard_ik.py  bhl_arm_spacemouse_ik.py  bhl_arm_steamvr_ik.py  config_bhl_arm_ik.py  config_bhl_arm_keyboard.py  config_bhl_arm_keyboard_ik.py  config_bhl_arm_spacemouse_ik.py  config_bhl_arm_steamvr_ik.py  motion_retargeting.py  spacemouse.py  steamvr.py
(+19 files in other folders)
