[project]
name = "lerobot_robot_bhl_arm"
version = "0.1.0"
description = "Berkeley Humanoid Lite Arm"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hidapi>=0.15.0",
    "lerobot>=0.4.4",
    "mink>=1.1.0",
    "mujoco>=3.5.0",
    "numpy>=2.0",
    "python-can>=4.6.1",
    "robstride-dynamics>=0.0.1",
    "tqdm>=4.66.0",
    "udpack>=2026.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lerobot_robot_bhl_arm", "lerobot_teleoperator_bhl_arm"]

[tool.hatch.build.targets.sdist]
include = [
    "/lerobot_robot_bhl_arm",
    "/lerobot_teleoperator_bhl_arm",
    "/examples",
    "/docs",
    "/README.md",
    "/pyproject.toml",
]
